# stm32h7-mp3

./: .gitignore  CMakeLists.txt  README.md  flash_app.ps1  prj.conf
app/: lvgl_firmware_upgrade.c  lvgl_firmware_upgrade.h  lvgl_flush_test.c  lvgl_flush_test.h  lvgl_sd_ota.c  lvgl_sd_ota.h  lvgl_sd_pic.c  lvgl_sd_pic.h  lvgl_sd_video.c  lvgl_sd_video.h  lvgl_uart_ota.c  lvgl_uart_ota.h
boards/: stm32h743iit6.overlay
bootloader/app/: mcuboot_upgrade.c  mcuboot_upgrade.h
bootloader/lib/: delta_patch.c  delta_patch.h  fwpkg_parser.h  uart_ota_protocol.h  uart_ota_server.c  ymodem.h
bootloader/lib/hdiffpatch/: _hcache_old_mt.c  _hpatch_mt.h  hpatch_mt.c  hpatch_mt.h  patch.c  patch.h  patch_types.h
bootloader/scrpt/: delta_gen.py  fwpkg_pack.py  ymodem_sender.py  zephyr.signed_v0.0.2.fwpkg  zephyr.signed_v0.0.4.fwpkg
hardware/: stm32h7手持mp3.eprj
lib/: gt1151q.c  gt1151q.h  jpegcodec.c  jpegcodec.h  lcd.c  lcd.h  my_malloc.c  my_malloc.h
mcuboot/: CMakeLists.txt  Kconfig  build_mcuboot.sh  flash_mcuboot.ps1  generate_keys.sh  prj.conf
mcuboot/boards/: stm32h743iit6.overlay
samples/lvgl_demo/: CMakeLists.txt  build.sh  prj.conf  需求.md
samples/lvgl_demo/Middlewares/LVGL/GUI/lvgl/: lv_conf.h
samples/lvgl_demo/Middlewares/LVGL/GUI/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_indev_template.c
samples/lvgl_demo/Middlewares/LVGL/GUI/lvgl/src/core/: lv_obj.c
samples/lvgl_demo/Middlewares/LVGL/GUI/lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
samples/lvgl_demo/Middlewares/LVGL/GUI/lvgl/src/font/: lv_font_dejavu_16_persian_hebrew.c  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_12_subpx.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_26.c  lv_font_montserrat_28.c  lv_font_montserrat_28_compressed.c  lv_font_montserrat_30.c  lv_font_montserrat_32.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  lv_font_montserrat_38.c  lv_font_montserrat_40.c  lv_font_montserrat_42.c  lv_font_montserrat_44.c  lv_font_montserrat_46.c  lv_font_montserrat_48.c  lv_font_montserrat_8.c
samples/lvgl_demo/Middlewares/LVGL/GUI/lvgl/src/misc/: lv_txt.c  lv_txt.h  lv_txt_ap.c
samples/lvgl_demo/Middlewares/LVGL/GUI/lvgl/src/widgets/: lv_textarea.h
samples/lvgl_demo/Middlewares/LVGL/GUI_APP/demos/: README.md
samples/lvgl_demo/Middlewares/LVGL/GUI_APP/demos/benchmark/: README.md
samples/lvgl_demo/Middlewares/LVGL/GUI_APP/demos/music/: README.md
samples/lvgl_demo/app/: jpeg_app.c  jpeg_app.h  lvgl_firmware_upgrade.c  lvgl_firmware_upgrade.h  lvgl_flush_test.c  lvgl_flush_test.h  lvgl_sd_ota.c  lvgl_sd_ota.h  lvgl_sd_pic.c  lvgl_sd_pic.h  lvgl_sd_video.c  lvgl_sd_video.h  lvgl_uart_ota.c  lvgl_uart_ota.h
samples/lvgl_demo/boards/: stm32h743iit6.overlay
samples/lvgl_demo/bootloader/: OTA_README.md  UART_OTA_README.md
samples/lvgl_demo/bootloader/app/: mcuboot_upgrade.h
samples/lvgl_demo/bootloader/lib/: uart_ota_protocol.c  uart_ota_server.c  uart_ota_server.h
samples/lvgl_demo/bootloader/scrpt/: fwpkg_pack.py
samples/lvgl_demo/lib/: gt1151q.c  jpegcodec.c  lcd.c  lcd.h  my_malloc.c  my_malloc.h
samples/lvgl_demo/src/: led_thread.c  led_thread.h  main.c  main.h  video_thread.c  video_thread.h
sd/FIRMWARE/: v0.0.2_delta.fwpkg
src/: led_thread.c  led_thread.h  main.c  video_thread.c  video_thread.h
